--- a/html/miinv/12.0_checkfill.html
+++ b/html/miinv/12.0_checkfill.html
@@ -129,7 +129,8 @@
                 <div class="box" >
                     <label for="number"><a style="color: red;">*</a>公司統一編號</label>
                     <input type="number" name="number" id="number">
-                    <button id="next5" type="button" class="btn btn-primary activity_button">NEXT</button>
+                    <input type="button" name="register" value="註冊" onclick="window.location.href='./9.0_related.html'" >
+                   
                 </div>
             </div>
         </div>
