--- a/html/miinv/11.0_register.html
+++ b/html/miinv/11.0_register.html
@@ -1906,8 +1906,7 @@ if ($("#datepicker1").val() != "") {
                         </form>
                     </div>
                     <div class="register_subtitle">
-                        <button type="button" class="btn btn-outline-primary activity_button" id="next7">送
-                            出</button>
+                        <button type="button" class="btn btn-outline-primary activity_button" id="next7">送出</button>
                         <div class="hide" id="error-c-type1" style="color: #dc3545; font-size: 80%; margin-top: 0.5rem; margin-bottom: 0.25rem">請勾選同意申請書暨服務契約</div>
                     </div>
                 </div>
