--- a/html/miinv/12.0_checkfill.html
+++ b/html/miinv/12.0_checkfill.html
@@ -135,14 +135,9 @@
             </div>
         </div>
     </div>
-<table style="width:100%">
-        <tr>
-            <th>公司統編</th>
-            <th>公司名稱</th>
-            <th>發票開立日期</th>
-            <th>發票開立張數</th>
-        </tr>
-</table>
+    <ul class="list-group" id="showCSV" >
+                    
+    </ul>
 <script>     
        let mysql=require('mysql');
        
